compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOfEnclosingClass/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOfEnclosingClass/source.kt:6:16: error: cannot access 'Super' which is a supertype of 'SubClass'. Check your module classpath for missing or conflicting dependencies.
    SubClass().Inner() // Error - dispatch receiver misses supertype
               ^^^^^
COMPILATION_ERROR
